Find (in Files) -- a ROX Utility

Changelog:
-----------------
Version 007 (27-Nov-2005)
	* Bugfix for Version 006 - Cancel didn't stop the find until some output was
	generated. 
	* Bugfix for Version 006 - Closing Find via the Window Manager's control did
	not cancel the find or save the history. 
	* Change from ListView to TreeView and separate multiple searches using
	expander rows.
	* Suppress find/grep errors from results list.
	
Version 006 (26-Nov-2005)
	* UI redesign by Thomas Leonard
	* Pre-pend items to history list rather than append (most recent on top)
	* Support '~' in Path specification
	* README is not blank anymore!
	
Version 005 aka 'Lucky Number Five' aka 'Did I fix all the little bugs yet?' (31-05-2005)
	* Bug fixes
		- Icons not becoming sensitive when text boxes filled in
		- self.store.append(None) should be self.store.append()
		- referenced self.path_entry before it was created
	* Added 'Match whole words' option
	* Added Command Line Options
	* Failed to forget to bump the version number in AppInfo.xml

Version 004 (29-05-2005)
	* Ignore binary files option
	* Match case option
	* Recurse Subdirs option
	* More (final?) gtk < 2.4 fixes
	* <Enter> key executes Find.

Version 003 (26-05-2005)
	* Big rewrite, more or less
	* Use gtk.ComboBoxEntry where available instead of gtk.Entry
	* New class EntryThing (nice name) to wrap the above and add history support
	* Each entry box has history of up to 10 items
	* Fixed bugs: 
		- failed to parse text containing ':' properly
		- button sensitivity handling was not quite right
		- probably more that I don't remember :)

Version 002 (23-05-2005)
	* Set appropriate toolbar button sensitivity
	* Protect ellipsize and FileChooserDialog code from older (py)gtk versions.
	* Add drop target support - drag folder to icon to launch and search from that path
		(Suggested by Musus Umbra)
