@@ -3,38 +3,41 @@
 import findrox; findrox.version(2,0,0)
 import rox, os, sys
 
-__builtins__._ = rox.i18n.translation(os.path.join(rox.app_dir, 'Messages'))
-
-import filefind
-
-
-from optparse import OptionParser
-
-parser = OptionParser()
-
-parser.add_option("--options", action="store_true", dest="options", 
-				default=False, help=_("display options dialog"))
-
-parser.add_option("-p", "--path", type="string", dest="path", 
-				default=None, help=_("specify search path"))
-
-parser.add_option("-t", "--text", type="string", dest="text", 
-				default=None, help=_("specify search text"))
-
-parser.add_option("-f", "--files", type="string", dest="files", 
-				default=None, help=_("specify files to search in"))
-
-(options, args) = parser.parse_args()
-
-if options.options:
-	rox.edit_options()
-else:
-	if len(sys.argv) > 1:
-		path = sys.argv[1]
-	else:
-		path = options.path
-		
-	win = filefind.FindWindow(path, options.text, options.files)
-	win.show()
+try:
+	__builtins__._ = rox.i18n.translation(os.path.join(rox.app_dir, 'Messages'))
 	
-rox.mainloop()
+	import filefind
+	
+	from optparse import OptionParser
+	
+	parser = OptionParser()
+	
+	parser.add_option("--options", action="store_true", dest="options", 
+					default=False, help=_("display options dialog"))
+	
+	parser.add_option("-p", "--path", type="string", dest="path", 
+					default=None, help=_("specify search path"))
+	
+	parser.add_option("-t", "--text", type="string", dest="text", 
+					default=None, help=_("specify search text"))
+	
+	parser.add_option("-f", "--files", type="string", dest="files", 
+					default=None, help=_("specify files to search in"))
+	
+	(options, args) = parser.parse_args()
+	
+	if options.options:
+		rox.edit_options()
+	else:
+		if len(sys.argv) > 1:
+			path = sys.argv[1]
+		else:
+			path = options.path
+			
+		win = filefind.FindWindow(path, options.text, options.files)
+		win.show()
+		
+	rox.mainloop()
+except:
+	rox.report_exception()
+
